upgrades/validation: only run validation when services exist
During upgrades, validation test if a service is running before the
upgrade process starts.
In some cases, servies doesn't exist yet so we don't want to run the
validation.

This patch makes sure we check if the service is actually present on the
system before validating it's running correctly.

Also it makes sure that services are enabled before trying to stop them.
It allows use-cases where we want to add new services during an upgrade.
Also install new packages of services added in Ocata, so we can validate
upgrades on scenarios jobs.

Change-Id: Ib48fb6b1557be43956557cbde4cbe26b53a50bd8
(cherry picked from commit 7c84a9b390c469e716e5802eef078d2df3902c6a)

--- a/puppet/services/aodh-evaluator.yaml
+++ b/puppet/services/aodh-evaluator.yaml
@@ -41,9 +41,16 @@ outputs:
       step_config: |
         include tripleo::profile::base::aodh::evaluator
       upgrade_tasks:
+        - name: Check if aodh_evaluator is deployed
+          command: systemctl is-enabled openstack-aodh-evaluator
+          tags: common
+          ignore_errors: True
+          register: aodh_evaluator_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-aodh-evaluator is running"
           shell: /usr/bin/systemctl show 'openstack-aodh-evaluator' --property ActiveState | grep '\bactive\b'
+          when: aodh_evaluator_enabled.rc == 0
           tags: step0,validation
         - name: Stop aodh_evaluator service
           tags: step1
+          when: aodh_evaluator_enabled.rc == 0
           service: name=openstack-aodh-evaluator state=stopped
