--- a/puppet/services/apache.yaml
+++ b/puppet/services/apache.yaml
@@ -67,6 +67,12 @@ outputs:
       metadata_settings:
         get_attr: [ApacheTLS, role_data, metadata_settings]
       upgrade_tasks:
+        - name: Check if httpd is deployed
+          command: systemctl is-enabled httpd
+          tags: common
+          ignore_errors: True
+          register: httpd_enabled
         - name: "PreUpgrade step0,validation: Check service httpd is running"
           shell: /usr/bin/systemctl show 'httpd' --property ActiveState | grep '\bactive\b'
+          when: httpd_enabled.rc == 0
           tags: step0,validation
