--- a/puppet/services/auditd.yaml
+++ b/puppet/services/auditd.yaml
@@ -35,7 +35,7 @@ outputs:
       upgrade_tasks:
         - name: Check if auditd is deployed
           command: systemctl is-enabled auditd
-          tags: step0,validation
+          tags: common
           ignore_errors: True
           register: auditd_enabled
         - name: "PreUpgrade step0,validation: Check if auditd is running"
@@ -46,4 +46,5 @@ outputs:
           tags: step0,validation
         - name: Stop auditd service
           tags: step2
+          when: auditd_enabled.rc == 0
           service: name=auditd state=stopped
