--- a/puppet/services/ceilometer-collector.yaml
+++ b/puppet/services/ceilometer-collector.yaml
@@ -60,9 +60,16 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::ceilometer::collector
       upgrade_tasks:
+        - name: Check if ceilometer_collector is deployed
+          command: systemctl is-enabled openstack-ceilometer-collector
+          tags: common
+          ignore_errors: True
+          register: ceilometer_collector_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-ceilometer-collector is running"
           shell: /usr/bin/systemctl show 'openstack-ceilometer-collector' --property ActiveState | grep '\bactive\b'
+          when: ceilometer_collector_enabled.rc == 0
           tags: step0,validation
         - name: Stop ceilometer_collector service
           tags: step1
+          when: ceilometer_collector_enabled.rc == 0
           service: name=openstack-ceilometer-collector state=stopped
