--- a/puppet/services/cinder-api.yaml
+++ b/puppet/services/cinder-api.yaml
@@ -150,8 +150,14 @@ outputs:
       metadata_settings:
         get_attr: [ApacheServiceBase, role_data, metadata_settings]
       upgrade_tasks:
+        - name: Check if cinder_api is deployed
+          command: systemctl is-enabled openstack-cinder-api
+          tags: common
+          ignore_errors: True
+          register: cinder_api_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-cinder-api is running"
           shell: /usr/bin/systemctl show 'openstack-cinder-api' --property ActiveState | grep '\bactive\b'
+          when: cinder_api_enabled.rc == 0
           tags: step0,validation
         - name: check for cinder running under apache (post upgrade)
           tags: step1
@@ -164,4 +170,5 @@ outputs:
           when: "cinder_apache.rc == 0"
         - name: Stop and disable cinder_api service (pre-upgrade not under httpd)
           tags: step1
+          when: cinder_api_enabled.rc == 0
           service: name=openstack-cinder-api state=stopped enabled=no
