--- a/puppet/services/cinder-scheduler.yaml
+++ b/puppet/services/cinder-scheduler.yaml
@@ -52,9 +52,16 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::cinder::scheduler
       upgrade_tasks:
+        - name: Check if cinder_scheduler is deployed
+          command: systemctl is-enabled openstack-cinder-scheduler
+          tags: common
+          ignore_errors: True
+          register: cinder_scheduler_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-cinder-scheduler is running"
           shell: /usr/bin/systemctl show 'openstack-cinder-scheduler' --property ActiveState | grep '\bactive\b'
+          when: cinder_scheduler_enabled.rc == 0
           tags: step0,validation
         - name: Stop cinder_scheduler service
           tags: step1
+          when: cinder_scheduler_enabled.rc == 0
           service: name=openstack-cinder-scheduler state=stopped
