--- a/puppet/services/gnocchi-metricd.yaml
+++ b/puppet/services/gnocchi-metricd.yaml
@@ -47,9 +47,16 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::gnocchi::metricd
       upgrade_tasks:
+        - name: Check if gnocchi_metricd is deployed
+          command: systemctl is-enabled openstack-gnocchi-metricd
+          tags: common
+          ignore_errors: True
+          register: gnocchi_metricd_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-gnocchi-metricd is running"
           shell: /usr/bin/systemctl show 'openstack-gnocchi-metricd' --property ActiveState | grep '\bactive\b'
+          when: gnocchi_metricd_enabled.rc == 0
           tags: step0,validation
         - name: Stop gnocchi_metricd service
           tags: step1
+          when: gnocchi_metricd_enabled.rc == 0
           service: name=openstack-gnocchi-metricd state=stopped
