--- a/puppet/services/gnocchi-statsd.yaml
+++ b/puppet/services/gnocchi-statsd.yaml
@@ -46,9 +46,16 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::gnocchi::statsd
       upgrade_tasks:
+        - name: Check if gnocchi_statsd is deployed
+          command: systemctl is-enabled openstack-gnocchi-statsd
+          tags: common
+          ignore_errors: True
+          register: gnocchi_statsd_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-gnocchi-statsd is running"
           shell: /usr/bin/systemctl show 'openstack-gnocchi-statsd' --property ActiveState | grep '\bactive\b'
+          when: gnocchi_statsd_enabled.rc == 0
           tags: step0,validation
         - name: Stop gnocchi_statsd service
           tags: step1
+          when: gnocchi_statsd_enabled.rc == 0
           service: name=openstack-gnocchi-statsd state=stopped
