--- a/puppet/services/horizon.yaml
+++ b/puppet/services/horizon.yaml
@@ -100,7 +100,7 @@ outputs:
       upgrade_tasks:
         - name: Check if httpd is deployed
           command: systemctl is-enabled httpd
-          tags: step0,validation
+          tags: common
           ignore_errors: True
           register: httpd_enabled
         - name: "PreUpgrade step0,validation: Check if httpd is running"
@@ -111,4 +111,5 @@ outputs:
           tags: step0,validation
         - name: Stop Horizon (under httpd)
           tags: step1
+          when: httpd_enabled.rc == 0
           service: name=httpd state=stopped
