--- a/puppet/services/aodh-listener.yaml
+++ b/puppet/services/aodh-listener.yaml
@@ -41,9 +41,16 @@ outputs:
       step_config: |
         include tripleo::profile::base::aodh::listener
       upgrade_tasks:
+        - name: Check if aodh_listener is deployed
+          command: systemctl is-enabled openstack-aodh-listener
+          tags: common
+          ignore_errors: True
+          register: aodh_listener_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-aodh-listener is running"
           shell: /usr/bin/systemctl show 'openstack-aodh-listener' --property ActiveState | grep '\bactive\b'
+          when: aodh_listener_enabled.rc == 0
           tags: step0,validation
         - name: Stop aodh_listener service
           tags: step1
+          when: aodh_listener_enabled.rc == 0
           service: name=openstack-aodh-listener state=stopped
