--- a/puppet/services/aodh-notifier.yaml
+++ b/puppet/services/aodh-notifier.yaml
@@ -41,9 +41,16 @@ outputs:
       step_config: |
         include tripleo::profile::base::aodh::notifier
       upgrade_tasks:
+        - name: Check if aodh_notifier is deployed
+          command: systemctl is-enabled openstack-aodh-notifier
+          tags: common
+          ignore_errors: True
+          register: aodh_notifier_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-aodh-notifier is running"
           shell: /usr/bin/systemctl show 'openstack-aodh-notifier' --property ActiveState | grep '\bactive\b'
+          when: aodh_notifier_enabled.rc == 0
           tags: step0,validation
         - name: Stop aodh_notifier service
           tags: step1
+          when: aodh_notifier_enabled.rc == 0
           service: name=openstack-aodh-notifier state=stopped
