--- a/puppet/services/ceilometer-agent-central.yaml
+++ b/puppet/services/ceilometer-agent-central.yaml
@@ -55,9 +55,16 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::ceilometer::agent::central
       upgrade_tasks:
+        - name: Check if ceilometer_agent_central is deployed
+          command: systemctl is-enabled openstack-ceilometer-central
+          tags: common
+          ignore_errors: True
+          register: ceilometer_agent_central_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-ceilometer-central is running"
           shell: /usr/bin/systemctl show 'openstack-ceilometer-central' --property ActiveState | grep '\bactive\b'
+          when: ceilometer_agent_central_enabled.rc == 0
           tags: step0,validation
         - name: Stop ceilometer_agent_central service
           tags: step1
+          when: ceilometer_agent_central_enabled.rc == 0
           service: name=openstack-ceilometer-central state=stopped
