--- a/puppet/services/ceilometer-agent-notification.yaml
+++ b/puppet/services/ceilometer-agent-notification.yaml
@@ -50,9 +50,16 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::ceilometer::agent::notification
       upgrade_tasks:
+        - name: Check if ceilometer_agent_notification is deployed
+          command: systemctl is-enabled openstack-ceilometer-notification
+          tags: common
+          ignore_errors: True
+          register: ceilometer_agent_notification_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-ceilometer-notification is running"
           shell: /usr/bin/systemctl show 'openstack-ceilometer-notification' --property ActiveState | grep '\bactive\b'
+          when: ceilometer_agent_notification_enabled.rc == 0
           tags: step0,validation
         - name: Stop ceilometer_agent_notification service
           tags: step1
+          when: ceilometer_agent_notification_enabled.rc == 0
           service: name=openstack-ceilometer-notification state=stopped
