--- a/puppet/services/cinder-volume.yaml
+++ b/puppet/services/cinder-volume.yaml
@@ -116,9 +116,16 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::cinder::volume
       upgrade_tasks:
+        - name: Check if cinder_volume is deployed
+          command: systemctl is-enabled openstack-cinder-volume
+          tags: common
+          ignore_errors: True
+          register: cinder_volume_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-cinder-volume is running"
           shell: /usr/bin/systemctl show 'openstack-cinder-volume' --property ActiveState | grep '\bactive\b'
+          when: cinder_volume_enabled.rc == 0
           tags: step0,validation
         - name: Stop cinder_volume service
           tags: step1
+          when: cinder_volume_enabled.rc == 0
           service: name=openstack-cinder-volume state=stopped
