--- a/puppet/services/congress.yaml
+++ b/puppet/services/congress.yaml
@@ -89,9 +89,20 @@ outputs:
         include ::tripleo::profile::base::congress
 
       upgrade_tasks:
+        - name: Check if congress is deployed
+          command: systemctl is-enabled openstack-congress-server
+          tags: common
+          ignore_errors: True
+          register: congress_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-congress-server is running"
           shell: /usr/bin/systemctl show 'openstack-congress-server' --property ActiveState | grep '\bactive\b'
+          when: congress_enabled.rc == 0
           tags: step0,validation
         - name: Stop congress service
           tags: step1
+          when: congress_enabled.rc == 0
           service: name=openstack-congress-server state=stopped
+        - name: Install openstack-congress package if it was disabled
+          tags: step3
+          yum: name=openstack-congress state=latest
+          when: congress_enabled.rc != 0
