--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -137,12 +137,26 @@ outputs:
       service_config_settings:
         get_attr: [GlanceBase, role_data, service_config_settings]
       upgrade_tasks:
+        - name: Check if glance_api is deployed
+          command: systemctl is-enabled openstack-glance-api
+          tags: common
+          ignore_errors: True
+          register: glance_api_enabled
+        #(TODO) Remove all glance-registry bits in Pike.
+        - name: Check if glance_registry is deployed
+          command: systemctl is-enabled openstack-glance-registry
+          tags: common
+          ignore_errors: True
+          register: glance_registry_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-glance-api is running"
           shell: /usr/bin/systemctl show 'openstack-glance-api' --property ActiveState | grep '\bactive\b'
           tags: step0,validation
+          when: glance_api_enabled.rc == 0
         - name: Stop glance_api service
           tags: step1
+          when: glance_api_enabled.rc == 0
           service: name=openstack-glance-api state=stopped
         - name: Stop and disable glance registry (removed for Ocata)
           tags: step1
+          when: glance_registry_enabled.rc == 0
           service: name=openstack-glance-registry state=stopped enabled=no
