--- a/puppet/services/heat-api-cloudwatch.yaml
+++ b/puppet/services/heat-api-cloudwatch.yaml
@@ -67,9 +67,16 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::heat::api_cloudwatch
       upgrade_tasks:
+        - name: Check if heat_api_cloudwatch is deployed
+          command: systemctl is-enabled openstack-heat-api-cloudwatch
+          tags: common
+          ignore_errors: True
+          register: heat_api_cloudwatch_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-heat-api-cloudwatch is running"
           shell: /usr/bin/systemctl show 'openstack-heat-api-cloudwatch' --property ActiveState | grep '\bactive\b'
+          when: heat_api_cloudwatch_enabled.rc == 0
           tags: step0,validation
         - name: Stop heat_api_cloudwatch service
           tags: step1
+          when: heat_api_cloudwatch_enabled.rc == 0
           service: name=openstack-heat-api-cloudwatch state=stopped
