--- a/puppet/services/logging/fluentd-client.yaml
+++ b/puppet/services/logging/fluentd-client.yaml
@@ -63,11 +63,22 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::logging::fluentd
       upgrade_tasks:
+        - name: Check if fluentd_client is deployed
+          command: systemctl is-enabled fluentd
+          tags: common
+          ignore_errors: True
+          register: fluentd_client_enabled
         - name: Check status of fluentd service
           shell: >
             /usr/bin/systemctl show fluentd --property ActiveState |
             grep '\bactive\b'
+          when: fluentd_client_enabled.rc == 0
           tags: step0,validation
         - name: Stop fluentd service
           tags: step1
+          when: fluentd_client_enabled.rc == 0
           service: name=fluentd state=stopped
+        - name: Install fluentd package if it was disabled
+          tags: step3
+          yum: name=fluentd state=latest
+          when: fluentd_client_enabled.rc != 0
