--- a/puppet/services/neutron-l3.yaml
+++ b/puppet/services/neutron-l3.yaml
@@ -85,9 +85,16 @@ outputs:
       step_config: |
         include tripleo::profile::base::neutron::l3
       upgrade_tasks:
+        - name: Check if neutron_l3_agent is deployed
+          command: systemctl is-enabled neutron-l3-agent
+          tags: common
+          ignore_errors: True
+          register: neutron_l3_agent_enabled
         - name: "PreUpgrade step0,validation: Check service neutron-l3-agent is running"
           shell: /usr/bin/systemctl show 'neutron-l3-agent' --property ActiveState | grep '\bactive\b'
+          when: neutron_l3_agent_enabled.rc == 0
           tags: step0,validation
         - name: Stop neutron_l3 service
           tags: step1
+          when: neutron_l3_agent_enabled.rc == 0
           service: name=neutron-l3-agent state=stopped
