--- a/puppet/services/tacker.yaml
+++ b/puppet/services/tacker.yaml
@@ -97,9 +97,20 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::tacker
       upgrade_tasks:
+        - name: Check if tacker is deployed
+          command: systemctl is-enabled openstack-tacker-server
+          tags: common
+          ignore_errors: True
+          register: tacker_enabled
         - name: "PreUpgrade step0,validation: Check service openstack-tacker-server is running"
           shell: /usr/bin/systemctl show 'openstack-tacker-server' --property ActiveState | grep '\bactive\b'
+          when: tacker_enabled.rc == 0
           tags: step0,validation
         - name: Stop tacker service
           tags: step1
+          when: tacker_enabled.rc == 0
           service: name=openstack-tacker-server state=stopped
+        - name: Install openstack-tacker package if it was disabled
+          tags: step3
+          yum: name=openstack-tacker state=latest
+          when: tacker_enabled.rc != 0
