--- a/puppet/services/zaqar.yaml
+++ b/puppet/services/zaqar.yaml
@@ -67,7 +67,7 @@ outputs:
       upgrade_tasks:
         - name: Check if zaqar is deployed
           command: systemctl is-enabled openstack-zaqar
-          tags: step0,validation
+          tags: common
           ignore_errors: True
           register: zaqar_enabled
         - name: "PreUpgrade step0,validation: Check if openstack-zaqar is running"
@@ -78,4 +78,9 @@ outputs:
           tags: step0,validation
         - name: Stop zaqar service
           tags: step1
+          when: zaqar_enabled.rc == 0
           service: name=openstack-zaqar state=stopped
+        - name: Install openstack-zaqar package if it was disabled
+          tags: step3
+          yum: name=openstack-zaqar state=latest
+          when: zaqar_enabled.rc != 0
