Add validation for VPP upgrade tasks
Change-Id: I54a3cac11ae63c553f831a3f8eeca2cbe4cc88d3
Signed-off-by: Feng Pan <fpan@redhat.com>

--- a/puppet/services/vpp.yaml
+++ b/puppet/services/vpp.yaml
@@ -42,6 +42,16 @@ outputs:
       step_config: |
         include ::tripleo::profile::base::vpp
       upgrade_tasks:
+        - name: Check if vpp is deployed
+          command: systemctl is-enabled vpp
+          tags: common
+          ignore_errors: True
+          register: vpp_enabled
+        - name: "PreUpgrade step0,validation: Check service vpp is running"
+          shell: /usr/bin/systemctl show 'vpp' --property ActiveState | grep '\bactive\b'
+          when: vpp_enabled.rc == 0
+          tags: step0,validation
         - name: Stop vpp service
-          tags: step2
+          tags: step1
+          when: vpp_enabled.rc == 0
           service: name=vpp state=stopped
