upgrades: fix ec2api conditional
Rename ec2-api_enabled to ec2_api_enabled so we avoid this error:
The conditional check 'ec2-api_enabled.rc == 0' failed.
The error was: error while evaluating conditional
(ec2-api_enabled.rc == 0): 'api_enabled' is undefined"}

Change-Id: Id325fd7eba397155eac7fb6c7410f88486173ba1

--- a/puppet/services/ec2-api.yaml
+++ b/puppet/services/ec2-api.yaml
@@ -120,12 +120,12 @@ outputs:
           command: systemctl is-enabled openstack-ec2-api
           tags: step0,validation
           ignore_errors: True
-          register: ec2-api_enabled
+          register: ec2_api_enabled
         - name: "PreUpgrade step0,validation: Check if openstack-ec2-api is running"
           shell: >
             /usr/bin/systemctl show 'openstack-ec2-api' --property ActiveState |
             grep '\bactive\b'
-          when: ec2-api_enabled.rc == 0
+          when: ec2_api_enabled.rc == 0
           tags: step0,validation
         - name: Stop openstack-ec2-api service
           tags: step1
