--- a/environments/docker.yaml
+++ b/environments/docker.yaml
@@ -35,11 +35,11 @@ resource_registry:
   OS::TripleO::Services::GnocchiApi: ../docker/services/gnocchi-api.yaml
   OS::TripleO::Services::GnocchiMetricd: ../docker/services/gnocchi-metricd.yaml
   OS::TripleO::Services::GnocchiStatsd: ../docker/services/gnocchi-statsd.yaml
-
   OS::TripleO::Services::AodhApi: ../docker/services/aodh-api.yaml
   OS::TripleO::Services::AodhEvaluator: ../docker/services/aodh-evaluator.yaml
   OS::TripleO::Services::AodhNotifier: ../docker/services/aodh-notifier.yaml
   OS::TripleO::Services::AodhListener: ../docker/services/aodh-listener.yaml
+  OS::TripleO::Services::PankoApi: ../docker/services/panko-api.yaml
 
   OS::TripleO::PostDeploySteps: ../docker/post.yaml
   OS::TripleO::PostUpgradeSteps: ../docker/post-upgrade.yaml
