--- a/roles_data_undercloud.yaml
+++ b/roles_data_undercloud.yaml
@@ -41,3 +41,4 @@
     - OS::TripleO::Services::GnocchiApi
     - OS::TripleO::Services::GnocchiMetricd
     - OS::TripleO::Services::GnocchiStatsd
+    - OS::TripleO::Services::PankoApi
