scenario001/newton: deploy cinder with rbd backend
So we can easily test upgrades to ocata.
Change-Id: I0dbb6c2b6bc3b667d305a2704be7406e37d2c03f

--- a/ci/environments/scenario001-multinode.yaml
+++ b/ci/environments/scenario001-multinode.yaml
@@ -9,7 +9,6 @@ resource_registry:
   OS::TripleO::Services::Pacemaker: ../../puppet/services/pacemaker.yaml
   OS::TripleO::Services::Redis: ../../puppet/services/pacemaker/database/redis.yaml
   OS::TripleO::Services::MySQL: ../../puppet/services/pacemaker/database/mysql.yaml
-  OS::TripleO::Services::CinderBackup: ../../puppet/services/pacemaker/cinder-backup.yaml
   OS::TripleO::Services::CinderVolume: ../../puppet/services/pacemaker/cinder-volume.yaml
   OS::TripleO::Services::Keepalived: OS::Heat::None
   OS::TripleO::Tasks::ControllerPrePuppet: ../../extraconfig/tasks/pre_puppet_pacemaker.yaml
@@ -64,6 +63,9 @@ parameter_defaults:
     - OS::TripleO::Services::CephMon
     - OS::TripleO::Services::CephOSD
     - OS::TripleO::Services::CephClient
+    - OS::TripleO::Services::CinderApi
+    - OS::TripleO::Services::CinderScheduler
+    - OS::TripleO::Services::CinderVolume
     - OS::TripleO::Services::TripleoPackages
     - OS::TripleO::Services::TripleoFirewall
   ControllerExtraConfig:
@@ -86,3 +88,6 @@ parameter_defaults:
   CephClientKey: 'AQC+vYNXgDAgAhAAc8UoYt+OTz5uhV7ItLdwUw=='
   NovaEnableRbdBackend: true
   GlanceBackend: rbd
+  CinderEnableRbdBackend: true
+  CinderBackupBackend: ceph
+  CinderEnableIscsiBackend: false
