Switch to dict format for docker_puppet_tasks
This change gives the option of docker-puppet.py data to be in a dict
as well as a list. This allows docker_puppet_tasks data to use the
same keys as the top level puppet config data.

If the yaql fu can be worked out to build the top level data,
docker-puppet.py can later drop the list format entirely.

Change-Id: I7e2294c6c898d2340421c93516296ccf120aa6d2

--- a/docker/services/database/mongodb.yaml
+++ b/docker/services/database/mongodb.yaml
@@ -88,11 +88,13 @@ outputs:
       docker_puppet_tasks:
         # MySQL database initialization occurs only on single node
         step_2:
-          - 'mongodb_init_tasks'
-          - 'mongodb_database,mongodb_user,mongodb_replset'
-          - 'include ::tripleo::profile::base::database::mongodb'
-          - list_join:
+          config_volume: 'mongodb_init_tasks'
+          puppet_tags: 'mongodb_database,mongodb_user,mongodb_replset'
+          step_config: 'include ::tripleo::profile::base::database::mongodb'
+          config_image:
+            list_join:
             - '/'
             - [ {get_param: DockerNamespace}, {get_param: DockerMongodbImage} ]
-          - - "mongodb:/var/lib/mongodb"
-            - "logs:/var/log/kolla:ro"
+          volumes:
+          - "mongodb:/var/lib/mongodb/"
+          - "logs:/var/log/kolla:ro"
