--- a/docker/services/database/mysql.yaml
+++ b/docker/services/database/mysql.yaml
@@ -120,11 +120,13 @@ outputs:
       docker_puppet_tasks:
         # MySQL database initialization occurs only on single node
         step_2:
-          - 'mysql_init_tasks'
-          - 'mysql_database,mysql_grant,mysql_user'
-          - 'include ::tripleo::profile::base::database::mysql'
-          - list_join:
-            - '/'
-            - [ {get_param: DockerNamespace}, {get_param: DockerMysqlImage} ]
-          - - "mariadb:/var/lib/mysql/:ro"
+          config_volume: 'mysql_init_tasks'
+          puppet_tags: 'mysql_database,mysql_grant,mysql_user'
+          step_config: 'include ::tripleo::profile::base::database::mysql'
+          config_image:
+            list_join:
+              - '/'
+              - [ {get_param: DockerNamespace}, {get_param: DockerMysqlImage} ]
+          volumes:
+            - "mariadb:/var/lib/mysql/:ro"
             - "/var/lib/config-data/mysql/root:/root:ro" #provides .my.cnf
