--- a/docker/services/keystone.yaml
+++ b/docker/services/keystone.yaml
@@ -145,9 +145,10 @@ outputs:
       docker_puppet_tasks:
         # Keystone endpoint creation occurs only on single node
         step_3:
-          - 'keystone_init_tasks'
-          - 'keystone_config,keystone_domain_config,keystone_endpoint,keystone_identity_provider,keystone_paste_ini,keystone_role,keystone_service,keystone_tenant,keystone_user,keystone_user_role,keystone_domain'
-          - 'include ::tripleo::profile::base::keystone'
-          - list_join:
+          config_volume: 'keystone_init_tasks'
+          puppet_tags: 'keystone_config,keystone_domain_config,keystone_endpoint,keystone_identity_provider,keystone_paste_ini,keystone_role,keystone_service,keystone_tenant,keystone_user,keystone_user_role,keystone_domain'
+          step_config: 'include ::tripleo::profile::base::keystone'
+          config_image:
+            list_join:
             - '/'
             - [ {get_param: DockerNamespace}, {get_param: DockerKeystoneImage} ]
